[package]
name = "deluge-rdm"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
lalrpop-util = { version = "0.20", features = ["lexer"] }
tower-lsp = "0.20"

[build-dependencies]
lalrpop = "0.20"
